# buprestidae

./: Cargo.toml
migrations/20161211035235_create_posts/: down.sql  up.sql
migrations/20170107060405_add_users/: up.sql
migrations/20170116051845_add_slugs/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  session.rs
src/pages/: auth.rs  blog.rs  mod.rs
static/files/: marcusball-pgp.asc  marcusball-smime.crt
static/fonts/montserrat/: stylesheet.css
static/scripts/: highlight.pack.js
static/styles/: main.css  wing.min.css
templates/: blog_index.html.hbs  blog_new_post.html.hbs  contact.html.hbs  index.html.hbs
templates/auth/: login.html.hbs
templates/blog/: index.html.hbs  new_post.html.hbs  post.html.hbs
templates/common/: footer.hbs  header.hbs
