[package]
name = "buprestidae"
version = "0.1.0"
authors = ["Marcus Ball <marcus@marcusball.me>"]

[dependencies]
rocket = "0.1.5"
rocket_codegen = "0.1.5"
error-chain="0.7"
dotenv = "0.8.0"
diesel = { version = "0.9.1", features = ["uuid","chrono"] }
diesel_codegen = { version = "0.9.0", features = ["postgres"], optional = true }
r2d2 = "0.7.1"
r2d2-diesel = "0.9.0"
lazy_static = "0.2.2"
log = "0.3.6"
env_logger = "0.3.5"
base64 = "0.2.1"
chrono = "0.2.25"
serde = "*"
serde_derive = "*"
serde_json = "*"
lru_time_cache = "0.5.0"
textnonce = "0.4.1"
libreauth = "0.5.2"
slug = "0.1.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]

[features]
default = ["nightly"]
nightly = ["diesel/unstable", "diesel_codegen"]

