[package]
name = "buprestidae"
version = "0.1.0"
authors = ["Marcus Ball <marcus@marcusball.me>"]

[dependencies]
rocket = "0.2.2"
rocket_codegen = "0.2.2"
error-chain="0.7"
dotenv = "0.8.0"
diesel = { version = "0.10.0", features = ["postgres","uuid","chrono"] }
diesel_codegen = { version = "0.10.0", features = ["postgres"] }
r2d2 = "0.7.1"
r2d2-diesel = "0.10.0"
lazy_static = "0.2.2"
log = "0.3.6"
env_logger = "0.3.5"
base64 = "0.2.1"
chrono = "0.2.25"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"
lru_time_cache = "0.5.0"
textnonce = "0.4.1"
libreauth = "0.5.2"
slug = "0.1.2"
pulldown-cmark = "0.0.8"
time = "^0.1.31"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]


